--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Cardamom Rice Recipe</title>
     <meta charset="UTF-8" />
+    <!--Viewport gives the brower instructions on how to control the page's dimensions and scaling-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
